--- a/assets/css/style/base.scss
+++ b/assets/css/style/base.scss
@@ -33,6 +33,7 @@ $highlight: rgb(180, 255, 255);
 
 body {
   font-family: Merriweather, serif;
+  font-size: 12pt;
   line-height: 1.8rem;
 }
 
